# bluerev-jarvis-model-bench

./: .gitattributes  .gitignore  AGENTS.md  README.md  STATUS.md  pyproject.toml
.github/: h1-one-shot.json
candidates/: bench1-h3-primary.json  bench2-h3-lane1.json  bench2-h4-eligible.json  hermes-orchestrator-admitted-stack.json  models.example.json  models.local.json
config/: bench1-direct-semantic-oneshot.json  bench2-hermes-canary-oneshot.json  bench2-hermes-orchestrator-oneshot.json  bench2r-hermes-optimization-profiles.json  bench2r-hermes-preflight-marker.json  bench2r-hermes-s1-marker.json  bench2r-hermes-s2-marker.json  bench2r-hermes-s3a-marker.json  bench2r-hermes-s3a-r1-repair-marker.json  h2-primary-16k-oneshot.json  h3-primary-32k-oneshot.json  ho-route-explicit-replay-oneshot.json
docs/: BENCH-2-HERMES-LANE1-PLAN.md  BENCH-2-HERMES-ORCHESTRATOR-ISOLATION.md  BENCHMARK_CONTRACT.md  BENCH_1_CASE_CONTRACT.md  BENCH_1_DIRECT_SMOKE.md  BENCH_1_EXECUTION_SLICE.md  FINAL_BENCHMARK_OBJECTIVE.md  RUNNER_SETUP.md
scripts/: __init__.py  bench2r_deterministic_finalizer.py  bench2r_hermes_runtime.py  bench2r_loopback_wire_proxy.py  bench2r_windows_keep_awake.ps1  bench3_contract_constants.py  bench3r_mr0_contract.py  bench3r_mr0_identity_v2.py  bench3r_mr0_ids.py  bench3r_mr0_io.py  bench3r_mr0_namespace.py  bench3r_mr0_validate_design.py  bench3r_mr0_validate_policy.py  bench3r_mr0_validate_tools.py  benchmark_runtime.py  build_context_qualification_plan.py  build_h2_context_plan.py  build_residency_shortlist.py  hermes_install_probe.py  preflight.py  (+81 more)
(+265 files in other folders)
